--- a/elastic_net_regression.ipynb
+++ b/elastic_net_regression.ipynb
@@ -5,7 +5,7 @@
    "id": "d20c791c-4ee2-411e-9396-5b9d998db793",
    "metadata": {},
    "source": [
-    "# Programming Assignment 1 - Ridge regression without libraries\n",
+    "# Programming Assignment 2 - Elastic net regression without libraries\n",
     "\n",
     "CAP 5625 Computational Foundations of AI - Fall 2021 - Dr. DeGiorgio\n",
     "<br>Christian Garbin"
@@ -73,7 +73,7 @@
    "id": "99813544-60f4-4a67-ba08-26a57edaf269",
    "metadata": {},
    "source": [
-    "Import our ridge regression module and the utilities."
+    "Import our elastic net regression module and the utilities."
    ]
   },
   {
@@ -84,7 +84,7 @@
    "outputs": [],
    "source": [
     "import utils\n",
-    "import ridge"
+    "import elastic_net"
    ]
   },
   {
@@ -197,7 +197,7 @@
    "id": "cbdc9f8b-48bf-4b28-b192-ca5b8c416f22",
    "metadata": {},
    "source": [
-    "Perform ridge regression with the different lambda values (takes several seconds to complete).\n",
+    "Perform regression with the different lambda values (takes several seconds to complete).\n",
     "\n",
     "The large value for `iterations` makes it look closer to figure 6.4 in \"An Introduction to Statistical Learning\". Lower numbers of iterations (e.g. 10,000) are enough to see the overall trend, but don't match the figure exactly."
    ]
@@ -212,7 +212,7 @@
     "betas = []\n",
     "for lmbda in LAMBDAS_TO_TEST:\n",
     "    x, y = read_dataset()\n",
-    "    b = ridge.fit(x, y, lr=LR, lmbda=lmbda, iterations=100_000)\n",
+    "    b = elastic_net.fit(x, y, lr=LR, lmbda=lmbda, iterations=100_000)\n",
     "    betas.append(b)"
    ]
   },
@@ -275,7 +275,7 @@
    "id": "05654bd8-3dc7-4231-9a95-7ff37b02a865",
    "metadata": {},
    "source": [
-    "Perform ridge regression with the different lambda values and cross validation (takes several seconds to complete).\n",
+    "Perform regression with the different lambda values and cross validation (takes several seconds to complete).\n",
     "\n",
     "Note that the number of iterations was reduced to keep the run time reasonable."
    ]
@@ -298,8 +298,8 @@
     "        utils.scale_val(x_train, x_val)\n",
     "        utils.center_val(y_train, y_val)\n",
     "\n",
-    "        model = ridge.fit(x_train, y_train, lr=LR, lmbda=lmbda, iterations=20_000)\n",
-    "        predictions = ridge.predict(x_val, model)\n",
+    "        model = elastic_net.fit(x_train, y_train, lr=LR, lmbda=lmbda, iterations=20_000)\n",
+    "        predictions = elastic_net.predict(x_val, model)\n",
     "        fold_mse[fold-1] = utils.mse(y_val, predictions)\n",
     "    mse[i] = fold_mse.mean()"
    ]
@@ -349,7 +349,7 @@
    "id": "dfd701e1-c9d5-48b5-97e4-025e188f1172",
    "metadata": {},
    "source": [
-    "# Deliverable 3 - the lambda with the smallest SME\n",
+    "# Deliverable 3 - the lambda with the smallest MSE\n",
     "\n",
     "> _Indicate the value of 𝜆 that generated the smallest CV(5) error._"
    ]
@@ -371,7 +371,7 @@
    "source": [
     "smallest_sme_index = mse.argmin()\n",
     "smallest_sme_lambda = LAMBDAS_TO_TEST[smallest_sme_index]\n",
-    "print(f'The lambda with the smallest SME is {smallest_sme_lambda}')"
+    "print(f'The lambda with the smallest MSE is {smallest_sme_lambda}')"
    ]
   },
   {
@@ -379,7 +379,7 @@
    "id": "d50d87ed-961a-4210-a98c-faee16bedaf9",
    "metadata": {},
    "source": [
-    "# Deliverable 4 - model parameters for the lambda with the smallest SME\n",
+    "# Deliverable 4 - model parameters for the lambda with the smallest MSE\n",
     "\n",
     "> _Given the optimal 𝜆, retrain your model on the entire dataset of N=9 observations and provide the estimates of the p=9 best-fit model parameters._"
    ]
@@ -389,7 +389,7 @@
    "id": "fab940f0-48c4-4864-a3df-84dbeecd4d2b",
    "metadata": {},
    "source": [
-    "Train a model with the lambda that resulted in the smallest SME."
+    "Train a model with the lambda that resulted in the smallest MSE."
    ]
   },
   {
@@ -400,7 +400,7 @@
    "outputs": [],
    "source": [
     "x, y = read_dataset()\n",
-    "betas4 = ridge.fit(x, y, lr=LR, lmbda=smallest_sme_lambda, iterations=100_000)"
+    "betas4 = elastic_net.fit(x, y, lr=LR, lmbda=smallest_sme_lambda, iterations=100_000)"
    ]
   },
   {
@@ -488,8 +488,7 @@
     "for lmbda in LAMBDAS_TO_TEST:\n",
     "    x, y = read_dataset(standardize=False)\n",
     "    model_sk = pipeline.make_pipeline(preprocessing.StandardScaler(),\n",
-    "                                      linear_model.Ridge(alpha=lmbda,\n",
-    "                                                         solver='sag'))\n",
+    "                                      linear_model.ElasticNet(alpha=lmbda))\n",
     "    model_sk.fit(x, y)\n",
     "    coef_sk = model_sk.named_steps['ridge'].coef_\n",
     "    betas_sk.append(coef_sk)"
@@ -537,7 +536,7 @@
    "id": "cd8e9fa2-1c5a-4a62-9404-1b3ba3216d55",
    "metadata": {},
    "source": [
-    "Fit one model for each value of lambda. Ask scikit-learn to store the cross-validation results (`store_cv_values`) so we can calculate the mean SME for each lambda."
+    "Fit one model for each value of lambda. Ask scikit-learn to store the cross-validation results (`store_cv_values`) so we can calculate the mean MSE for each lambda."
    ]
   },
   {
@@ -549,7 +548,7 @@
    "source": [
     "x, y = read_dataset(standardize=False)\n",
     "p = pipeline.make_pipeline(preprocessing.StandardScaler(),\n",
-    "                           linear_model.RidgeCV(alphas=LAMBDAS_TO_TEST,\n",
+    "                           linear_model.ElasticNetCV(alphas=LAMBDAS_TO_TEST,\n",
     "                           store_cv_values=True))\n",
     "p.fit(x, y)\n",
     "model_sk = p.named_steps['ridgecv']\n",
@@ -592,7 +591,7 @@
    "id": "479dc0bb-277f-418a-affc-ce0065fab305",
    "metadata": {},
    "source": [
-    "## Deliverable 6.3 - the lambda with the smallest SME"
+    "## Deliverable 6.3 - the lambda with the smallest MSE"
    ]
   },
   {
@@ -610,7 +609,7 @@
     }
    ],
    "source": [
-    "print(f'The lambda with the smallest SME is {model_sk.alpha_}')"
+    "print(f'The lambda with the smallest MSE is {model_sk.alpha_}')"
    ]
   },
   {
@@ -618,7 +617,7 @@
    "id": "0938f093-9d7b-4791-b268-16306f8d5908",
    "metadata": {},
    "source": [
-    "## Deliverable 6.4 - model parameters for the lambda with the smallest SME"
+    "## Deliverable 6.4 - model parameters for the lambda with the smallest MSE"
    ]
   },
   {
@@ -666,13 +665,21 @@
    "id": "8ceb8648-46c9-4248-9833-aa414a603a2a",
    "metadata": {},
    "source": [
-    "The result or our code were close to the ones from scikit-learn. For all practical purposes we can say that the results are effectivelly the same for both implementations.\n",
+    "The result or our code were close to the ones from scikit-learn. For all practical purposes, we can say that the results are the same for both implementations.\n",
     "\n",
     "The major differences are in the implementation details. In general, the scikit-learn implmentation is more efficient. More specifically:\n",
     "\n",
-    "- It dynamically calculates the learning rate. In our code we had to experiment with several learnign rates to find an optimal one.\n",
-    "- It converges ordoers of magnitude more quickly. Besides choosing a better learning rate, [the core of the optimizer is implemented in Cython](https://github.com/scikit-learn/scikit-learn/blob/main/sklearn/linear_model/_sag_fast.pyx.tp)"
+    "- It dynamically calculates the learning rate. In our code we had to experiment with several learningn rates to find an optimal one.\n",
+    "- It converges orders of magnitude more quickly. Besides choosing a better learning rate, [the core of the optimizer is implemented in Cython](https://github.com/scikit-learn/scikit-learn/blob/main/sklearn/linear_model/_sag_fast.pyx.tp)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a701ec73-0c86-431d-8834-ddf2aad75a79",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
