--- a/ridge_regression.ipynb
+++ b/ridge_regression.ipynb
@@ -349,14 +349,14 @@
    "id": "dfd701e1-c9d5-48b5-97e4-025e188f1172",
    "metadata": {},
    "source": [
-    "# Deliverable 3 - the lambda with the smallest SME\n",
+    "# Deliverable 3 - the lambda with the smallest MSE\n",
     "\n",
     "> _Indicate the value of 𝜆 that generated the smallest CV(5) error._"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "id": "fc15879b-8b07-4158-81ba-2da7aa5c3f85",
    "metadata": {},
    "outputs": [
@@ -364,14 +364,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The lambda with the smallest SME is 0.01\n"
+      "The lambda with the smallest MSE is 0.01\n"
      ]
     }
    ],
    "source": [
-    "smallest_sme_index = mse.argmin()\n",
-    "smallest_sme_lambda = LAMBDAS_TO_TEST[smallest_sme_index]\n",
-    "print(f'The lambda with the smallest SME is {smallest_sme_lambda}')"
+    "smallest_mse_index = mse.argmin()\n",
+    "smallest_mse_lambda = LAMBDAS_TO_TEST[smallest_mse_index]\n",
+    "print(f'The lambda with the smallest MSE is {smallest_mse_lambda}')"
    ]
   },
   {
@@ -379,7 +379,7 @@
    "id": "d50d87ed-961a-4210-a98c-faee16bedaf9",
    "metadata": {},
    "source": [
-    "# Deliverable 4 - model parameters for the lambda with the smallest SME\n",
+    "# Deliverable 4 - model parameters for the lambda with the smallest MSE\n",
     "\n",
     "> _Given the optimal 𝜆, retrain your model on the entire dataset of N=9 observations and provide the estimates of the p=9 best-fit model parameters._"
    ]
@@ -389,7 +389,7 @@
    "id": "fab940f0-48c4-4864-a3df-84dbeecd4d2b",
    "metadata": {},
    "source": [
-    "Train a model with the lambda that resulted in the smallest SME."
+    "Train a model with the lambda that resulted in the smallest MSE."
    ]
   },
   {
@@ -400,7 +400,7 @@
    "outputs": [],
    "source": [
     "x, y = read_dataset()\n",
-    "betas4 = ridge.fit(x, y, lr=LR, lmbda=smallest_sme_lambda, iterations=100_000)"
+    "betas4 = ridge.fit(x, y, lr=LR, lmbda=smallest_mse_lambda, iterations=100_000)"
    ]
   },
   {
