Add discussion of elastic net: our code vs scikit-learn

--- a/elastic_net_regression.ipynb
+++ b/elastic_net_regression.ipynb
@@ -1144,24 +1144,28 @@
    "id": "8ceb8648-46c9-4248-9833-aa414a603a2a",
    "metadata": {},
    "source": [
-    "Even though the values of alpha and lambda for the smallest SME differ, for all practical purposes we can say that the results are the same for both implementations. The coefficients are in the same range of values, so the models would peform about the same.\n",
+    "Even though the values of alpha and lambda for the smallest SME differ, for all practical purposes we can say that the results are the same for both implementations.\n",
     "\n",
-    "The major difference in behavior can be explained by the function our code minimizes, compared to the one that scikit-learn minimizes. According to the [scikit-learn documentation](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.ElasticNet.html), it minimizes the function below, which is similar, but not the same as the one minimized in our code.\n",
+    "The major difference in behavior can be explained by the function our code minimizes, compared to the one that scikit-learn minimizes. According to the [scikit-learn documentation](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.ElasticNet.html), it minimizes this function:\n",
     "\n",
     "```text\n",
     "1 / (2 * n_samples) * ||y - Xw||^2_2\n",
     "+ alpha * l1_ratio * ||w||_1\n",
     "+ 0.5 * alpha * (1 - l1_ratio) * ||w||^2_2\n",
-    "```\n"
+    "```\n",
+    "\n",
+    "Which, using our notation, can be rewritten as\n",
+    "\n",
+    "```text\n",
+    "  1\n",
+    "---- ||Y - X*beta||^2 + lambda(1 - alpha)||beta|| + lambda*alpha||beta||^2_2\n",
+    " 2N\n",
+    " ```\n",
+    "\n",
+    "Or, for environments that can render LaTeX: $\\frac{1}{2N}\\| Y - X\\beta \\|^2_2 + \\lambda(1 - \\alpha)\\|\\beta\\|_1 + \\lambda\\alpha\\|\\beta\\|^2_2$\n",
+    " \n",
+    "The first term is RSS divided by 1/2N, the second term is the amount of lasso regularization and the third is the amount of ridge regularization. We can see that it is fundamentally the same as the function we optimize in our code, but not exactly the same. The similarities explain why the general shape of the curves in the graphs is the same between the two solutions, but the exact values of alpha and lambda are different. Despite the differences, the coefficients (betas) are in the same range of values, so the models would peform about the same."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a701ec73-0c86-431d-8834-ddf2aad75a79",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
