Add option to hot-encode the output column when loading the dataset

--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -37,10 +37,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6de75063-2184-4072-8ce8-875140fe9065",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import copy\n",
     "from typing import Tuple\n",
@@ -68,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "522223ab-232a-46b3-960b-30a654c95b97",
    "metadata": {},
    "outputs": [],
@@ -95,10 +105,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "bddbe6fa-a714-4a35-a22e-23953ca40608",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All tests passed\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append('./test')\n",
@@ -118,12 +136,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "90aaabf6-cb1d-4149-9b41-e0c2176a7c73",
    "metadata": {},
    "outputs": [],
    "source": [
-    "LAMBDAS_TO_TEST = [0.01, 0.1, 1, 10, 100, 1_000, 10_000]\n",
+    "LAMBDAS_TO_TEST = [1e-4, 1e-3, 1e-2, 1e-1, 1e0, 1e1, 1e2, 1e3, 1e4]\n",
     "NUM_TESTS = len(LAMBDAS_TO_TEST)\n",
     "LR = 0.00001\n",
     "NUM_FOLDS = 5"
@@ -141,24 +159,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "5a4b1573-61ca-4430-96fa-182336decc70",
    "metadata": {},
    "outputs": [],
    "source": [
     "FEATURE_NAMES = []\n",
+    "CATEGORIES = []\n",
     "\n",
     "def read_dataset(standardize: bool = True) -> Tuple[np.ndarray, np.ndarray]:\n",
-    "    global FEATURE_NAMES\n",
+    "    global FEATURE_NAMES, CATEGORIES\n",
     "    \n",
-    "    x, y, FEATURE_NAMES = utils.read_dataset('./data/TrainingData_N183_p10.csv')\n",
+    "    x, y, FEATURE_NAMES, CATEGORIES = utils.read_dataset(\n",
+    "        './data/TrainingData_N183_p10.csv', hot_encode=True)\n",
     "\n",
     "    if standardize:\n",
     "        utils.scale(x)\n",
-    "        utils.center(y)\n",
     "\n",
     "    return x, y"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "13613359-8ab5-4a9c-8c37-69310a073bb6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x, y = read_dataset(standardize=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f3072242-0a89-42b5-8e96-f444c58c133b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = pd.read_csv('./data/TrainingData_N183_p10.csv')\n",
+    "\n",
+    "# Split the features (input) from the output, assumming the last column is the output\n",
+    "features = dataset.iloc[:, :-1]\n",
+    "output = dataset.iloc[:, -1:]\n",
+    "\n",
+    "# If requested, convert the output variable from categorical to indicators (hot encoding)\n",
+    "# Note that it assumes that the output is a single column\n",
+    "output = output.iloc[:, 0].str.get_dummies()\n",
+    "\n",
+    "# Convert to NumPy arrays in preparation to manipulate it\n",
+    "x = features.to_numpy()\n",
+    "y = output.to_numpy()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "14b751f8-0847-436f-93c0-5201f6ab3955",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['African', 'EastAsian', 'European', 'NativeAmerican', 'Oceanian']"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CATEGORIES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42badc4d-9fad-41c9-a521-c79292aace8c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
