Use option to hot-encode the output column

--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -181,64 +181,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "id": "13613359-8ab5-4a9c-8c37-69310a073bb6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x, y = read_dataset(standardize=False)"
+    "x, y = read_dataset(standardize=False)\n",
+    "assert len(CATEGORIES) == 5"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "f3072242-0a89-42b5-8e96-f444c58c133b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset = pd.read_csv('./data/TrainingData_N183_p10.csv')\n",
-    "\n",
-    "# Split the features (input) from the output, assumming the last column is the output\n",
-    "features = dataset.iloc[:, :-1]\n",
-    "output = dataset.iloc[:, -1:]\n",
-    "\n",
-    "# If requested, convert the output variable from categorical to indicators (hot encoding)\n",
-    "# Note that it assumes that the output is a single column\n",
-    "output = output.iloc[:, 0].str.get_dummies()\n",
-    "\n",
-    "# Convert to NumPy arrays in preparation to manipulate it\n",
-    "x = features.to_numpy()\n",
-    "y = output.to_numpy()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "14b751f8-0847-436f-93c0-5201f6ab3955",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['African', 'EastAsian', 'European', 'NativeAmerican', 'Oceanian']"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "CATEGORIES"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "42badc4d-9fad-41c9-a521-c79292aace8c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
