Hot-encode as float, not integers

--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -191,6 +191,209 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "9cc2ea1e-a7f4-4c66-91f8-fa07e330dc8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0],\n",
+       "       [0, 0, 1, 0, 0],\n",
+       "       [0, 0, 1, 0, 0],\n",
+       "       [0, 0, 1, 0, 0],\n",
+       "       [0, 0, 1, 0, 0],\n",
+       "       [0, 0, 1, 0, 0],\n",
+       "       [0, 0, 1, 0, 0],\n",
+       "       [0, 0, 1, 0, 0],\n",
+       "       [0, 0, 1, 0, 0],\n",
+       "       [0, 0, 1, 0, 0],\n",
+       "       [0, 0, 1, 0, 0],\n",
+       "       [0, 0, 1, 0, 0],\n",
+       "       [0, 0, 1, 0, 0],\n",
+       "       [0, 0, 1, 0, 0],\n",
+       "       [0, 0, 1, 0, 0],\n",
+       "       [0, 0, 1, 0, 0],\n",
+       "       [0, 0, 1, 0, 0],\n",
+       "       [0, 0, 1, 0, 0],\n",
+       "       [0, 0, 1, 0, 0],\n",
+       "       [0, 0, 1, 0, 0],\n",
+       "       [0, 0, 1, 0, 0],\n",
+       "       [0, 0, 1, 0, 0],\n",
+       "       [0, 0, 1, 0, 0],\n",
+       "       [0, 0, 1, 0, 0],\n",
+       "       [0, 0, 1, 0, 0],\n",
+       "       [0, 0, 1, 0, 0],\n",
+       "       [0, 0, 1, 0, 0],\n",
+       "       [0, 0, 1, 0, 0],\n",
+       "       [0, 0, 1, 0, 0],\n",
+       "       [0, 0, 1, 0, 0],\n",
+       "       [0, 0, 1, 0, 0],\n",
+       "       [0, 0, 1, 0, 0],\n",
+       "       [0, 0, 1, 0, 0],\n",
+       "       [0, 0, 1, 0, 0],\n",
+       "       [0, 0, 1, 0, 0],\n",
+       "       [0, 0, 1, 0, 0],\n",
+       "       [0, 0, 1, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 1],\n",
+       "       [0, 0, 0, 0, 1],\n",
+       "       [0, 0, 0, 0, 1],\n",
+       "       [0, 0, 0, 0, 1],\n",
+       "       [0, 0, 0, 0, 1],\n",
+       "       [0, 0, 0, 0, 1],\n",
+       "       [0, 0, 0, 0, 1],\n",
+       "       [0, 0, 0, 0, 1],\n",
+       "       [0, 0, 0, 0, 1],\n",
+       "       [0, 0, 0, 0, 1],\n",
+       "       [0, 0, 0, 0, 1],\n",
+       "       [0, 0, 0, 0, 1],\n",
+       "       [0, 0, 0, 0, 1],\n",
+       "       [0, 0, 0, 0, 1],\n",
+       "       [0, 0, 0, 0, 1],\n",
+       "       [0, 0, 0, 0, 1],\n",
+       "       [0, 0, 0, 0, 1],\n",
+       "       [0, 0, 0, 0, 1],\n",
+       "       [0, 0, 0, 0, 1],\n",
+       "       [0, 0, 0, 0, 1],\n",
+       "       [0, 0, 0, 0, 1],\n",
+       "       [0, 0, 0, 0, 1],\n",
+       "       [0, 0, 0, 0, 1],\n",
+       "       [0, 0, 0, 0, 1],\n",
+       "       [0, 0, 0, 0, 1],\n",
+       "       [0, 0, 0, 0, 1],\n",
+       "       [0, 0, 0, 0, 1],\n",
+       "       [0, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 1, 0]])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ca500878-ed53-455c-bcdc-744528d37d62",
    "metadata": {},
