--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -159,18 +159,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "5a4b1573-61ca-4430-96fa-182336decc70",
    "metadata": {},
    "outputs": [],
    "source": [
     "FEATURE_NAMES = []\n",
-    "CATEGORIES = []\n",
+    "CLASS_NAMES = []\n",
     "\n",
     "def read_dataset(standardize: bool = True) -> Tuple[np.ndarray, np.ndarray]:\n",
-    "    global FEATURE_NAMES, CATEGORIES\n",
+    "    global FEATURE_NAMES, CLASS_NAMES\n",
     "    \n",
-    "    x, y, FEATURE_NAMES, CATEGORIES = utils.read_dataset(\n",
+    "    x, y, FEATURE_NAMES, CLASS_NAMES = utils.read_dataset(\n",
     "        './data/TrainingData_N183_p10.csv', hot_encode=True)\n",
     "\n",
     "    if standardize:\n",
@@ -181,216 +181,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "13613359-8ab5-4a9c-8c37-69310a073bb6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x, y = read_dataset(standardize=False)\n",
-    "assert len(CATEGORIES) == 5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "9cc2ea1e-a7f4-4c66-91f8-fa07e330dc8f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1, 0, 0, 0, 0],\n",
-       "       [1, 0, 0, 0, 0],\n",
-       "       [1, 0, 0, 0, 0],\n",
-       "       [1, 0, 0, 0, 0],\n",
-       "       [1, 0, 0, 0, 0],\n",
-       "       [1, 0, 0, 0, 0],\n",
-       "       [1, 0, 0, 0, 0],\n",
-       "       [1, 0, 0, 0, 0],\n",
-       "       [1, 0, 0, 0, 0],\n",
-       "       [1, 0, 0, 0, 0],\n",
-       "       [1, 0, 0, 0, 0],\n",
-       "       [1, 0, 0, 0, 0],\n",
-       "       [1, 0, 0, 0, 0],\n",
-       "       [1, 0, 0, 0, 0],\n",
-       "       [1, 0, 0, 0, 0],\n",
-       "       [1, 0, 0, 0, 0],\n",
-       "       [1, 0, 0, 0, 0],\n",
-       "       [1, 0, 0, 0, 0],\n",
-       "       [1, 0, 0, 0, 0],\n",
-       "       [1, 0, 0, 0, 0],\n",
-       "       [1, 0, 0, 0, 0],\n",
-       "       [1, 0, 0, 0, 0],\n",
-       "       [1, 0, 0, 0, 0],\n",
-       "       [1, 0, 0, 0, 0],\n",
-       "       [1, 0, 0, 0, 0],\n",
-       "       [0, 0, 1, 0, 0],\n",
-       "       [0, 0, 1, 0, 0],\n",
-       "       [0, 0, 1, 0, 0],\n",
-       "       [0, 0, 1, 0, 0],\n",
-       "       [0, 0, 1, 0, 0],\n",
-       "       [0, 0, 1, 0, 0],\n",
-       "       [0, 0, 1, 0, 0],\n",
-       "       [0, 0, 1, 0, 0],\n",
-       "       [0, 0, 1, 0, 0],\n",
-       "       [0, 0, 1, 0, 0],\n",
-       "       [0, 0, 1, 0, 0],\n",
-       "       [0, 0, 1, 0, 0],\n",
-       "       [0, 0, 1, 0, 0],\n",
-       "       [0, 0, 1, 0, 0],\n",
-       "       [0, 0, 1, 0, 0],\n",
-       "       [0, 0, 1, 0, 0],\n",
-       "       [0, 0, 1, 0, 0],\n",
-       "       [0, 0, 1, 0, 0],\n",
-       "       [0, 0, 1, 0, 0],\n",
-       "       [0, 0, 1, 0, 0],\n",
-       "       [0, 0, 1, 0, 0],\n",
-       "       [0, 0, 1, 0, 0],\n",
-       "       [0, 0, 1, 0, 0],\n",
-       "       [0, 0, 1, 0, 0],\n",
-       "       [0, 0, 1, 0, 0],\n",
-       "       [0, 0, 1, 0, 0],\n",
-       "       [0, 0, 1, 0, 0],\n",
-       "       [0, 0, 1, 0, 0],\n",
-       "       [0, 0, 1, 0, 0],\n",
-       "       [0, 0, 1, 0, 0],\n",
-       "       [0, 0, 1, 0, 0],\n",
-       "       [0, 0, 1, 0, 0],\n",
-       "       [0, 0, 1, 0, 0],\n",
-       "       [0, 0, 1, 0, 0],\n",
-       "       [0, 0, 1, 0, 0],\n",
-       "       [0, 0, 1, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 1],\n",
-       "       [0, 0, 0, 0, 1],\n",
-       "       [0, 0, 0, 0, 1],\n",
-       "       [0, 0, 0, 0, 1],\n",
-       "       [0, 0, 0, 0, 1],\n",
-       "       [0, 0, 0, 0, 1],\n",
-       "       [0, 0, 0, 0, 1],\n",
-       "       [0, 0, 0, 0, 1],\n",
-       "       [0, 0, 0, 0, 1],\n",
-       "       [0, 0, 0, 0, 1],\n",
-       "       [0, 0, 0, 0, 1],\n",
-       "       [0, 0, 0, 0, 1],\n",
-       "       [0, 0, 0, 0, 1],\n",
-       "       [0, 0, 0, 0, 1],\n",
-       "       [0, 0, 0, 0, 1],\n",
-       "       [0, 0, 0, 0, 1],\n",
-       "       [0, 0, 0, 0, 1],\n",
-       "       [0, 0, 0, 0, 1],\n",
-       "       [0, 0, 0, 0, 1],\n",
-       "       [0, 0, 0, 0, 1],\n",
-       "       [0, 0, 0, 0, 1],\n",
-       "       [0, 0, 0, 0, 1],\n",
-       "       [0, 0, 0, 0, 1],\n",
-       "       [0, 0, 0, 0, 1],\n",
-       "       [0, 0, 0, 0, 1],\n",
-       "       [0, 0, 0, 0, 1],\n",
-       "       [0, 0, 0, 0, 1],\n",
-       "       [0, 0, 0, 1, 0],\n",
-       "       [0, 0, 0, 1, 0],\n",
-       "       [0, 0, 0, 1, 0],\n",
-       "       [0, 0, 0, 1, 0],\n",
-       "       [0, 0, 0, 1, 0],\n",
-       "       [0, 0, 0, 1, 0],\n",
-       "       [0, 0, 0, 1, 0],\n",
-       "       [0, 0, 0, 1, 0],\n",
-       "       [0, 0, 0, 1, 0],\n",
-       "       [0, 0, 0, 1, 0],\n",
-       "       [0, 0, 0, 1, 0],\n",
-       "       [0, 0, 0, 1, 0],\n",
-       "       [0, 0, 0, 1, 0],\n",
-       "       [0, 0, 0, 1, 0],\n",
-       "       [0, 0, 0, 1, 0],\n",
-       "       [0, 0, 0, 1, 0],\n",
-       "       [0, 0, 0, 1, 0],\n",
-       "       [0, 0, 0, 1, 0],\n",
-       "       [0, 0, 0, 1, 0],\n",
-       "       [0, 0, 0, 1, 0],\n",
-       "       [0, 0, 0, 1, 0],\n",
-       "       [0, 0, 0, 1, 0],\n",
-       "       [0, 0, 0, 1, 0],\n",
-       "       [0, 0, 0, 1, 0],\n",
-       "       [0, 0, 0, 1, 0],\n",
-       "       [0, 0, 0, 1, 0],\n",
-       "       [0, 0, 0, 1, 0],\n",
-       "       [0, 0, 0, 1, 0],\n",
-       "       [0, 0, 0, 1, 0],\n",
-       "       [0, 0, 0, 1, 0],\n",
-       "       [0, 0, 0, 1, 0],\n",
-       "       [0, 0, 0, 1, 0],\n",
-       "       [0, 0, 0, 1, 0],\n",
-       "       [0, 0, 0, 1, 0]])"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y"
+    "x, y = read_dataset(standardize=True)\n",
+    "assert len(CLASS_NAMES) == 5"
    ]
   },
   {
