First implementation of logistic regression - needs testing

--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -175,6 +175,7 @@
     "\n",
     "    if standardize:\n",
     "        utils.scale(x)\n",
+    "        # Note that y is not centered in this case\n",
     "\n",
     "    return x, y"
    ]
