Return raw values of the output column

--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -170,7 +170,7 @@
     "def read_dataset(standardize: bool = True) -> Tuple[np.ndarray, np.ndarray]:\n",
     "    global FEATURE_NAMES, CLASS_NAMES\n",
     "    \n",
-    "    x, y, FEATURE_NAMES, CLASS_NAMES = utils.read_dataset(\n",
+    "    x, y, _, FEATURE_NAMES, CLASS_NAMES = utils.read_dataset(\n",
     "        './data/TrainingData_N183_p10.csv', hot_encode=True)\n",
     "\n",
     "    if standardize:\n",
