Adjust section headers

--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -181,17 +181,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "13613359-8ab5-4a9c-8c37-69310a073bb6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x, y = read_dataset(standardize=True)\n",
-    "assert len(CLASS_NAMES) == 5"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "ca500878-ed53-455c-bcdc-744528d37d62",
    "metadata": {},
@@ -261,7 +250,7 @@
    "id": "2b4b4e42-32ed-4ef8-a373-fc00c728afb3",
    "metadata": {},
    "source": [
-    "# Deliverable 2 - effect of lambda on MSE (with cross validation)\n",
+    "# Deliverable 2 - effect of lambda on cross-validation error (categorial cross-entropy)\n",
     "\n",
     "> _Illustrate the effect of the tuning parameter on the cross validation error by generating a plot with the y-axis as CV(5) error, and the x-axis the corresponding log-scaled tuning parameter value log10(λ) that generated the particular CV(5) error._"
    ]
@@ -332,7 +321,7 @@
    "id": "dfd701e1-c9d5-48b5-97e4-025e188f1172",
    "metadata": {},
    "source": [
-    "# Deliverable 3 - the lambda with the smallest MSE\n",
+    "# Deliverable 3 - the lambda with the smallest cross-validation error\n",
     "\n",
     "> _Indicate the value of λ value (sic) that generated the smallest CV(5) error._"
    ]
@@ -354,7 +343,7 @@
    "id": "d50d87ed-961a-4210-a98c-faee16bedaf9",
    "metadata": {},
    "source": [
-    "# Deliverable 4 - model parameters for the lambda with the smallest MSE\n",
+    "# Deliverable 4 - model parameters for the lambda with the smallest cross-validation error\n",
     "\n",
     "> _Given the optimal λ, retrain your model on the entire dataset of N = 183 observations to obtain an estimate of the (p + 1) × K model parameter matrix as B̂ and make predictions of the probability for each of the K = 5 classes for the 111 test individuals located in `TestData_N111_p10.csv`._"
    ]
@@ -511,7 +500,7 @@
    "id": "3e68f77a-71c6-4ae7-87b9-b9715c3b1c40",
    "metadata": {},
    "source": [
-    "## Deliverable 7.2 - effect of lambda on MSE (with cross validation)"
+    "## Deliverable 7.2 - effect of lambda on cross-validation error (categorial cross-entropy)"
    ]
   },
   {
@@ -563,7 +552,7 @@
    "id": "479dc0bb-277f-418a-affc-ce0065fab305",
    "metadata": {},
    "source": [
-    "## Deliverable 7.3 - the lambda with the smallest MSE"
+    "## Deliverable 7.3 - the lambda with the smallest cross-validation error"
    ]
   },
   {
@@ -581,7 +570,7 @@
    "id": "0938f093-9d7b-4791-b268-16306f8d5908",
    "metadata": {},
    "source": [
-    "## Deliverable 7.4 - model parameters for the lambda with the smallest MSE"
+    "## Deliverable 7.4 - model parameters for the lambda with the smallest cross-validation error"
    ]
   },
   {
