Read training and test dataset

--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "bddbe6fa-a714-4a35-a22e-23953ca40608",
    "metadata": {},
    "outputs": [
@@ -120,9 +120,9 @@
    "source": [
     "import sys\n",
     "sys.path.append('./test')\n",
-    "import test_all\n",
+    "import test_logistic\n",
     "# Set to true to see each test result\n",
-    "test_all.test_all(False, './data')\n",
+    "test_logistic.test_all(False, './data')\n",
     "print('All tests passed')"
    ]
   },
@@ -136,14 +136,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "90aaabf6-cb1d-4149-9b41-e0c2176a7c73",
    "metadata": {},
    "outputs": [],
    "source": [
     "LAMBDAS_TO_TEST = [1e-4, 1e-3, 1e-2, 1e-1, 1e0, 1e1, 1e2, 1e3, 1e4]\n",
     "NUM_TESTS = len(LAMBDAS_TO_TEST)\n",
-    "LR = 0.00001\n",
+    "LR = 0.0001\n",
     "NUM_FOLDS = 5"
    ]
   },
@@ -159,25 +159,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "id": "5a4b1573-61ca-4430-96fa-182336decc70",
    "metadata": {},
    "outputs": [],
    "source": [
+    "TRAINING_FILE = './data/TrainingData_N183_p10.csv'\n",
+    "TEST_FILE = './data/TestData_N111_p10.csv'\n",
     "FEATURE_NAMES = []\n",
     "CLASS_NAMES = []\n",
     "\n",
-    "def read_dataset(standardize: bool = True) -> Tuple[np.ndarray, np.ndarray]:\n",
+    "def read_dataset(file: str, standardize: bool = True) -> Tuple[np.ndarray, np.ndarray]:\n",
     "    global FEATURE_NAMES, CLASS_NAMES\n",
     "    \n",
-    "    x, y, _, FEATURE_NAMES, CLASS_NAMES = utils.read_dataset(\n",
-    "        './data/TrainingData_N183_p10.csv', hot_encode=True)\n",
+    "    x, y, y_raw, FEATURE_NAMES, CLASS_NAMES = utils.read_dataset(file, hot_encode=True)\n",
     "\n",
     "    if standardize:\n",
     "        utils.scale(x)\n",
     "        # Note that y is not centered in this case\n",
     "\n",
-    "    return x, y"
+    "    return x, y, y_raw"
    ]
   },
   {
@@ -200,15 +201,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "dc0e5447-d34c-4c3d-9cb9-626826951dc7",
    "metadata": {},
    "outputs": [],
    "source": [
     "betas = []\n",
     "for lmbda in LAMBDAS_TO_TEST:\n",
-    "    x, y = read_dataset()\n",
-    "    b = logistic.fit(x, y, lr=LR, lmbda=lmbda, iterations=100_000)\n",
+    "    x, y, _ = read_dataset(TRAINING_FILE)\n",
+    "    b = logistic.fit(x, y, lr=LR, lmbda=lmbda, iterations=10_000)\n",
     "    betas.append(b)"
    ]
   },
