Add scikit-learn's smallest lambda - deliverab;le 7.3

--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -877,13 +877,33 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8ee47f38-bb45-4d1b-8af7-ecab6b09fd94",
+   "cell_type": "markdown",
+   "id": "71b841de-1905-4fd2-a334-7b493b4e449c",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "print(f'The lambda with the smallest categorical cross-entropy is {model_sk.alpha_}')"
+    "`LogisticRegressionCV` stores the best lambdas per class. Although it could be a different lambda per class, in preactice it's usually the same, so we use the first one.\n",
+    "\n",
+    "We also need to take the inverse of the stored value `C_`, because scikit-learn uses [_\"...the inverse of regularization strength.\"_](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegressionCV.html)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "9d84ad82-274a-4c1d-898e-8bddef5a5333",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The lambda with the smallest categorical cross-entropy is 0.01\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Although C_ could be different for each class, it's likely not\n",
+    "smallest_cce_lambda_sk = 1/model_sk.C_[0]\n",
+    "print(f'The lambda with the smallest categorical cross-entropy is {smallest_cce_lambda_sk}')"
    ]
   },
   {
